# AL3-MiniProject

./: Lin_correlation.py  README.md  correlation_non_lin.py  intervention_priority.py  main.py  mutual_info.py  pyproject.toml  stats.py  temptemp.py
data/: -2a.csv  -2b.csv  -2d.csv  -2f.csv  0b.csv  0d.csv  0ec.csv  2a.csv  2c.csv  2d.csv  2e.csv  data_1504.csv  data_2358.csv
sovs2/: dag_validator.py  get_multiple_relations.py  graphmaker.py  hej.py  new.py  setup.ipynb  temp_hej.py
src/: config.py  constraints_extractor.py  correlation_non_lin.py  demo_find_graphs.py  find.py  graph_finder.py  heatmap.py  main.py  mutual_info.py  new.py  plot_distributions.py  setup.ipynb  temp.py  temptemptemp.py  test_graph_finder.py  tester.py
testdata/: -2a.csv  -2b.csv  -2c.csv  2b.csv  2c.csv
