[project]
name = "al3-miniproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "causal-learn>=0.1.4.5",
    "dcor>=0.7",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]
